--- a/index.html
+++ b/index.html
@@ -9,7 +9,15 @@
 <body>
     <div class="urna">
         <div class="tela"> 
-         ...
+            <div class="d-1"> 
+                ...
+            </div>
+            <div class="d-2"> 
+                Aperte a tecla: <br/>
+                CONFIRMAR para CONFIRMAR este voto<br/>
+                CORRIGE para REINICIAR este voto
+            </div>
+         
         </div>
         <div class="teclado">
             <div class="teclado--linha">
@@ -30,9 +38,9 @@
                 <div class="teclado--botao">0</div>
             </div>
             <div class="teclado--linha">
-                <div class="teclado--botao">BRANCO</div>
-                <div class="teclado--botao">CORRIGE</div>
-                <div class="teclado--botao">CONFIRMA</div>
+                <div class="teclado--botao botao--branco">BRANCO</div>
+                <div class="teclado--botao botao--corrige">CORRIGE</div>
+                <div class="teclado--botao botao--confirma">CONFIRMA</div>
             </div>
         </div>
     </div>    
