--- a/index.html
+++ b/index.html
@@ -10,7 +10,26 @@
     <div class="urna">
         <div class="tela"> 
             <div class="d-1"> 
-                ...
+                <div class="d-1-left">
+                    <div class="d-1-1">
+                        <samp>SEU VOTO PARA</samp>
+                    </div>
+                    <div class="d-1-2">
+                        <span>VEREADOR</span>
+                    </div>
+                    <div class="d-1-3">
+                        <div class="numero pisca"></div>
+                        <div class="numero"></div>
+                    </div>
+                    <div class="d-1-4">
+                        Nome: Fulando de tal<br/>
+                        Partido: qqq<br/>
+                        Vice-prefeito: Beltano de tal
+                    </div>
+                </div>
+                <div class="d-1-right">
+                    ...
+                </div>
             </div>
             <div class="d-2"> 
                 Aperte a tecla: <br/>
