--- a/index.html
+++ b/index.html
@@ -15,20 +15,27 @@
                         <samp>SEU VOTO PARA</samp>
                     </div>
                     <div class="d-1-2">
-                        <span>VEREADOR</span>
+                        <span>PREFEITO</span>
                     </div>
                     <div class="d-1-3">
                         <div class="numero pisca"></div>
                         <div class="numero"></div>
                     </div>
                     <div class="d-1-4">
-                        Nome: Fulando de tal<br/>
-                        Partido: qqq<br/>
-                        Vice-prefeito: Beltano de tal
+                        Nome: Batman <br/>
+                        Partido: Liga da Justiça <br/>
+                        Vice-prefeito: Robin
                     </div>
                 </div>
                 <div class="d-1-right">
-                    ...
+                    <div class="d-1-imagem">
+                        <img src="imagens/1.jpg" alt="" />
+                        Prefeito
+                </div>
+                <div class="d-1-imagem">
+                        <img src="imagens/1_1.webp" alt="" />
+                        Vice-prefeito
+                    </div>
                 </div>
             </div>
             <div class="d-2"> 
