controlando elementos da tela

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <div class="d-1"> 
                 <div class="d-1-left">
                     <div class="d-1-1">
-                        <samp>SEU VOTO PARA</samp>
+                        <span>SEU VOTO PARA</span>
                     </div>
                     <div class="d-1-2">
                         <span>PREFEITO</span>
@@ -29,11 +29,11 @@
                 </div>
                 <div class="d-1-right">
                     <div class="d-1-imagem">
-                        <img src="imagens/1.jpg" alt="" />
+                        <img src="imagens/10.jpg" alt="" />
                         Prefeito
                 </div>
                 <div class="d-1-imagem">
-                        <img src="imagens/1_1.webp" alt="" />
+                        <img src="imagens/11.webp" alt="" />
                         Vice-prefeito
                     </div>
                 </div>
